# tauri-plugin-midi

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
example/: index-notusingtime.html  index.html  old.html  package.json  tsconfig.json
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/capabilities/: default.json
example/src-tauri/src/: lib.rs  main.rs
guest-js/: bindings.ts  index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: close_input.toml  close_output.toml  open_input.toml  open_output.toml  output_send.toml
permissions/schemas/: schema.json
src/: lib.rs  polyfill.js
