[package]
name = "tauri-plugin-midi"
links = "tauri-plugin-midi"
description = "A WebMIDI-compatible plugin for Tauri"
license = "MIT"
version = "0.1.1"
authors = ["Brendan Allan", "Oscar Beaumont"]
edition = "2021"
rust-version = "1.60"
include = ["/src", "/build.rs", "/permissions", "/LICENSE", "/README.md"]
repository = "https://github.com/specta-rs/tauri-plugin-midi"
documentation = "https://docs.rs/tauri-plugin-midi"
keywords = ["tauri", "midi", "webmidi", "tauri-plugin"]
categories = ["web-programming"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# midir = "0.9.1"
midir = { git = "https://github.com/oscartbeaumont/midir", rev = "126725e170ab69e54359110f65c26d970b1b2f36" }
serde = "1.0.195"
specta = "=2.0.0-rc.20"
tauri = { version = "^2.0.0-rc.16" }
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
coremidi-hotplug-notification = "0.1.1"

[dev-dependencies]
tauri-specta = { version = "=2.0.0-rc.20", features = ["typescript"] }
specta-typescript = { version = "0.0.7" }

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.13", features = ["build"] }
