[package]
name = "tauri-plugin-midi"
links = "tauri-plugin-midi"
description = "A WebMIDI-compatible plugin for Tauri"
license = "MIT"
version = "0.2.0"
authors = ["Brendan Allan", "Oscar Beaumont"]
edition = "2021"
rust-version = "1.77"
include = ["/src", "/build.rs", "/permissions", "/LICENSE", "/README.md"]
repository = "https://github.com/specta-rs/tauri-plugin-midi"
documentation = "https://docs.rs/tauri-plugin-midi"
keywords = ["tauri", "midi", "webmidi", "tauri-plugin"]
categories = ["web-programming"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
midir = "0.11"
serde = "1"
specta = "=2.0.0-rc.25"
tauri = "2.11.1"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive"] }
tokio = { version = "1.29.1", features = ["time"] }

[target.'cfg(target_os = "macos")'.dependencies]
coremidi-hotplug-notification = "0.1.3"

[dev-dependencies]
tauri-specta = { version = "=2.0.0-rc.25", features = ["typescript"] }
specta-typescript = { version = "0.0.12" }

[build-dependencies]
tauri-plugin = { version = "2.6.1", features = ["build"] }
